fix nav spacing

--- a/Open Inventory/OpenInventory.css
+++ b/Open Inventory/OpenInventory.css
@@ -16,7 +16,7 @@ body {
     margin-left: 50px;
     margin-bottom: 0;
     letter-spacing: 5px;
-    width: 100%;
+    width: 97%;
 }
 
 .socials {
