--- a/resume.css
+++ b/resume.css
@@ -17,7 +17,7 @@ body {
     margin-left: 50px;
     margin-bottom: 0;
     letter-spacing: 5px;
-    width: 100%;
+    width: 97%;
 }
 
 .socials {
